Filter out entries for files in subdirectories even at the root.  Bug 367459, patch by Alfred Kayser <alfredkayser@nl.ibm.com>, r+sr=bzbarsky